--- a/package.json
+++ b/package.json
@@ -1,29 +1,15 @@
 {
-  "name": "{{project_name}}",
+  "name": "{{package_name}}",
   "version": "0.0.0",
+  "private": true,
+  "packageManager": "pnpm@10.22.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.2.4",
-    "@tailwindcss/vite": "^4.1.17",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.555.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "lint": "turbo lint",
+    "type-check": "turbo type-check"
   },
   "devDependencies": {
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^4.1.2",
-    "vite": "^7.2.4",
-    "vite-plugin-babel": "^1.3.2",
-    "vite-plugin-react": "^4.0.0"
+    "turbo": "^2.3.3"
   }
 }
