--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
   "files.associations": {
     "*.css": "tailwindcss"
-  }
+  },
+    "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
+    "editor.formatOnType": false, 
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "file", 
+    "files.autoSave": "onFocusChange", 
+    "vs-code-prettier-eslint.prettierLast": false,
+    "prettier.requireConfig": true,
+    
 }
