--- a/components.json
+++ b/components.json
@@ -5,18 +5,18 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/index.css",
+    "css": "packages/ui/index.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "components": "packages/ui",
+    "utils": "@repo/lib/utils",
+    "ui": "packages/ui",
+    "lib": "packages/lib",
+    "hooks": "packages/lib/hooks"
   },
   "registries": {}
 }
