--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "./button": {
       "types": "./button.tsx",
       "default": "./button.tsx"
-    }
+    },
+    "./styles": "./index.css"
   },
   "scripts": {
     "type-check": "tsc --noEmit",
