--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,7 +13,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@repo/ui/*": ["../../packages/ui/*"],
+      "@repo/lib/*": ["../../packages/lib/*"]
+    }
   },
   "include": ["src"]
 }
