--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./base": "./base.ts",
-    "./react": "./react.ts"
+    "./base": "./src/base.ts",
+    "./react": "./src/react.ts"
   },
   "files": [
-    "base.ts",
-    "react.ts"
+    "src/base.ts",
+    "src/react.ts"
   ],
   "devDependencies": {
     "@eslint/js": "^9.39.1",
