--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,34 @@
+# IDE
 .vscode
 .claude
+.idea
 
+# Build outputs
+dist
+build
+.turbo
+*.tsbuildinfo
+
+# Dependencies
+node_modules
+pnpm-lock.yaml
+
+# Cache
+.cache
+.eslintcache
+
+# Logs
+*.log
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Generated files
+coverage
+.nyc_output
+
+# OS
+.DS_Store
+Thumbs.db
