--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -4,14 +4,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./utils": {
-      "types": "./src/utils.ts",
-      "default": "./src/utils.ts"
-    },
-    "./schemas": {
-      "types": "./src/schemas.ts",
-      "default": "./src/schemas.ts"
-    }
+    "./*": "./src/*.ts"
   },
   "scripts": {
     "type-check": "tsc --noEmit",
