--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./button": {
-      "types": "./src/button.tsx",
-      "default": "./src/button.tsx"
-    },
-    "./styles": "./index.css"
+    "./globals.css": "./src/styles/globals.css",
+    "./styles": "./src/styles/globals.css",
+    "./postcss.config": "./postcss.config.mjs",
+    "./lib/*": "./src/lib/*.ts",
+    "./components/*": "./src/components/*.tsx",
+    "./hooks/*": "./src/hooks/*.ts"
   },
   "scripts": {
-    "type-check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0"
   },
   "peerDependencies": {
@@ -19,14 +20,25 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
-    "@repo/lib": "workspace:*",
-    "class-variance-authority": "^0.7.1"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.3.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/react": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^20.19.9",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "eslint": "^9.18.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2"
   }
 }
