--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,12 +23,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.3.6",
-    "zod": "^3.25.76"
+    "tw-animate-css": "^1.3.6"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
