--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,7 +23,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "react": "^19.1.1",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.3.6"
   },
@@ -35,6 +34,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.18.0",
+    "postcss-load-config": "^6.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2"
   }
