--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
+    "@turbo/gen": "^2.6.3",
     "eslint-config-prettier": "^9.1.2",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
