feat: postcss for packages/ui

--- a/turbo.json
+++ b/turbo.json
@@ -13,8 +13,8 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
-    "type-check": {
-      "dependsOn": ["^type-check"]
+    "typecheck": {
+      "dependsOn": ["^typecheck"]
     }
   }
 }
