--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,21 +4,23 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./globals.css": "./src/styles/globals.css",
-    "./styles": "./src/styles/globals.css",
-    "./postcss.config": "./postcss.config.mjs",
+    "./styles": "./dist/styles.css",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts"
   },
   "scripts": {
-    "type-check": "tsc --noEmit",
-    "lint": "eslint . --max-warnings 0"
+    "dev": "postcss ./src/styles/globals.css -o ./dist/styles.css --watch --verbose",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --max-warnings 0",
+    "build:css": "postcss ./src/styles/globals.css -o ./dist/styles.css --verbose",
+    "build": "pnpm run build:css && tsc --noEmit"
   },
   "peerDependencies": {
     "react": "^19.2.0"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +36,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.18.0",
+    "postcss-cli": "^11.0.1",
     "postcss-load-config": "^6.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2"
