--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "{{package_name}}",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.22.0",
+  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c",
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
@@ -11,7 +11,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,mdx,css,html,yml,yaml}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,mdx,css,html,yml,yaml}\"",
     "prepare": "husky",
-    "knip": "knip --production"
+    "knip": "knip --production",
+    "sync-prompts": "./scripts/sync-coding-tools.ts"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,mdx,css,html,yml,yaml}": [
