--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./*": "./src/*.ts"
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "default": "./dist/*.js"
+    }
   },
   "scripts": {
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0"
   },
@@ -19,6 +24,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "eslint": "^9.18.0",
+    "tsdown": "0.17.2",
     "typescript": "^5.7.2"
   }
 }
