--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,12 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "./packages/typescript-config/base.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@repo/ui/*": ["packages/ui/src/*"],
-      "@repo/lib/*": ["packages/lib/src/*"],
-      "@repo/shared/*": ["packages/shared/src/*"]
-    }
-  }
+  "files": [],
+  "references": [
+    { "path": "./packages/lib" },
+    { "path": "./packages/shared" },
+    { "path": "./packages/ui" },
+    { "path": "./apps/web" }
+  ]
 }
