--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,7 @@
       "outputs": []
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"],
+      "dependsOn": ["^build"],
       "outputs": []
     }
   }
