--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,10 +11,10 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@repo/ui/components",
+    "components": "src/components",
     "utils": "@repo/ui/lib/utils",
     "hooks": "@repo/ui/hooks",
     "lib": "@repo/ui/lib",
-    "ui": "@repo/ui/components"
+    "ui": "@repo/ui/components/ui"
   }
 }
