--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,9 +6,10 @@
     "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "tsBuildInfoFile": ".tsbuildinfo"
+    "tsBuildInfoFile": ".turbo/types/web.tsbuildinfo"
   },
   "include": ["src"],
+  "exclude": ["node_modules", ".turbo"],
   "references": [
     { "path": "../../packages/lib" },
     { "path": "../../packages/shared" },
