--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "type": "module",
   "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
     "./styles": "./dist/styles.css",
     "./lib/*": {
       "types": "./dist/lib/*.d.ts",
@@ -20,7 +24,7 @@
   },
   "scripts": {
     "dev": "pnpm run build:css --watch",
-    "build": "vite build && tsc --emitDeclarationOnly --outDir dist && pnpm run build:css",
+    "build": "tsdown && pnpm run build:css",
     "build:css": "postcss ./src/styles/globals.css -o ./dist/styles.css --verbose",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0"
@@ -30,6 +34,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,11 +50,10 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.18.0",
-    "glob": "^13.0.0",
     "postcss-cli": "^11.0.1",
     "postcss-load-config": "^6.0.1",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.7.2",
-    "vite": "^7.2.7"
+    "tsdown": "0.17.2",
+    "typescript": "^5.7.2"
   }
 }
