--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,6 +13,7 @@
   ],
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.1",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "eslint": "^9.39.1",
