--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "./src/styles/globals.css",
+    "css": "src/styles/globals.css",
     "baseColor": "neutral",
     "cssVariables": true
   },
@@ -13,8 +13,8 @@
   "aliases": {
     "components": "src/components",
     "utils": "@repo/ui/lib/utils",
-    "hooks": "@repo/ui/hooks",
+    "hooks": "@repo/ui/lib/hooks",
     "lib": "@repo/ui/lib",
-    "ui": "@repo/ui/components/ui"
+    "ui": "src/components/ui"
   }
 }
