--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,5 +6,5 @@
     "tsBuildInfoFile": ".turbo/types/ui.tsbuildinfo"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", ".turbo"]
+  "exclude": ["node_modules", "dist", ".turbo", "scripts"]
 }
