--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "pnpm run generate:barrels && tsdown",
-    "dev": "tsdown --watch",
+    "dev": "tsdown --log-level error --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0",
     "generate:barrels": "barrelsby --config .barrelsby.json"
